# fuel-ccp

./: .coveragerc  .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  bindep.txt  constraints.txt  nodes.json  requirements.txt  rq.yaml  setup.cfg  test-requirements.txt  timmy-config.yaml  tox.ini
dev/registry/: deploy-registry.sh  registry-pod.yaml  registry-service.yaml
doc/source/: app_def_guide.rst  bootstraping.rst  bootstrapping.rst  ceph.rst  ceph_cluster.rst  conf.py  config.rst  contributing.rst  debugging.rst  deploying-k8s-via-kargo.rst  deploying_multiple_parallel_environments.rst  diagnostic_snapshot.rst  docker.rst  dsl.rst  enable_neutron_dvr.rst  enable_sriov.rst  external_access.rst  galera.rst  index.rst  installation.rst  (+9 more)
etc/: ccp-conf.yaml  openrc-example  topology-calico-example.yaml  topology-example.yaml  topology-opendaylight-example.yaml  topology-with-ceph-example.yaml  topology-with-large-number-of-nodes.yaml  topology-with-stacklight-example.yaml  topology-with-zmq-example.yaml
fuel_ccp/: __init__.py  action.py  build.py  cleanup.py  cli.py  dependencies.py  deploy.py  diagnostic.py  fernet_utils.py  fetch.py  kubernetes.py  show_dep.py  status.py  storage.py  templates.py  utils.py  validate.py
microservices/: __init__.py  build.py  cli.py  deploy.py  docker_client.py  exceptions.py  fetch.py  kubernetes.py  templates.py
rq/: default.yaml  neutron.yaml  nova.yaml
tempest/: newton-skip-list.list  tempest.conf
tools/: collect_log.sh  deploy-test-vms.sh  deploy_k8s_cluster.sh  diagnostic-snapshot.sh  net_test.sh  yamllint.sh  yamllint.yaml
(+270 files in other folders)
