[metadata]
name = fuel-ccp
summary = Docker images builder for OpenStack services and infra.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    fuel_ccp

[entry_points]
console_scripts =
    ccp = fuel_ccp.cli:main
ccp.cli =
    build = fuel_ccp.cli:Build
    cleanup = fuel_ccp.cli:Cleanup
    deploy = fuel_ccp.cli:Deploy
    fetch = fuel_ccp.cli:Fetch
    show-dep = fuel_ccp.cli:ShowDep
    status = fuel_ccp.cli:ShowStatus
    validate = fuel_ccp.cli:Validate
    config_dump = fuel_ccp.cli:ConfigDump

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = fuel_ccp/locale
domain = fuel-ccp

[update_catalog]
domain = fuel-ccp
output_dir = fuel_ccp/locale
input_file = fuel_ccp/locale/microservices.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = fuel_ccp/locale/microservices.pot
